--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>POCK 🗻 Saper 🧻 Rcissors ✂ </title>
+    <title>ROCK 🤘 PAPER 🧻 SCISSORS 💈 </title>
 
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
@@ -41,8 +41,8 @@
     <script defer src="js/cam.js"></script>
     <script defer src="js/vision.js"></script>
     <script defer src="js/game.js"></script>
-    <script src="js/fingerpose.js"></script>
-    <script src="js/gesturerecognition.js"></script>
+    <script defer src="js/fingerpose.js"></script>
+    <script defer src="js/gesturerecognition.js"></script>
     <script defer src="js/script.js"></script>
 
 </head>
@@ -53,7 +53,7 @@
         <div id="info-text" ></div>
 
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">ROCK 🗿 PAPER 🧻 SCISSORS ✂️</span>
+            <span class="mdl-layout-title">ROCK 🤘 PAPER 🧻 SCISSORS 💈</span>
             <div class="mdl-layout-spacer"></div>
             <button id="help" class="mdl-button mdl-js-button mdl-button--icon mdl-button--colored">
                 <i class="material-icons">help</i>
